--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>Phoenix Logos</title>
+	<link rel="stylesheet" href="mainStyle.css">
 </head>
 <body>
 	<h1> Phoenix Logos </h1>
+	<a href="JOHNNY AIRLINES.png" download="JOHNNY AIRLINES.png"><img src="JOHNNY AIRLINES.png" ></a>
 </body>
 </html>
