--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 	<h1> Phoenix Logos </h1>
-	<a href="JOHNNY AIRLINES.png" download="JOHNNY AIRLINES.png"><img src="JOHNNY AIRLINES.png" ></a>
+	<a href="JOHNNY AIRLINES.png" download="JOHNNY AIRLINES.png">
+		<div class="background">
+			<div class="transbox">
+				<img src="overlay.png">
+			</div>
+		</div>
+	</a>
 </body>
 </html>
